samples/_failures_safe/1761186398_5c8ae1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5a38b1f3.c: In function ‘main’:
./samples/SAFE/__tmp_5a38b1f3.c:160:5: error: expected declaration or statement at end of input
  160 |     printf("\n=== SUMMARY ===\n");
      |     ^~~~~~
